@@ -1,3 +1,6 @@
+    $ cpanm Data::Pageset
+    $ grunt
+
 v0.3.2
 
     # volunteer.conf
