@@ -25,6 +25,9 @@
 .label-canceled {
     background-color: #d15b47 !important;
 }
+.label-drop {
+    background-color: #ffb752 !important;
+}
 .male {
     color: #428bca;
 }
