@@ -1,0 +1,136 @@
+% title '봉사활동 목록';
+% layout 'default', jses => ['/assets/dist/js/work-list.min.js'];
+% my %status_map = (reported => '신청', approved => '승인', done => '방문', canceled => '취소', drop => '방문안함');
+% use DateTime;
+
+<% my $volunteer_item_block = begin %>
+  % my $work = shift;
+  % my $volunteer = $work->volunteer;
+  % my $from = $work->activity_from_date;
+  % my $to   = $work->activity_to_date;
+  % my $birthdate = $volunteer->birth_date;
+  % my $age = $birthdate ? DateTime->now->year - $birthdate->year + 1 : '나이모름';
+  % my $status = $work->get_column('status');
+  <span class="list-group-item status-<%= $status %>" data-work-id="<%= $work->id %>">
+    <h4 class="list-group-item-heading"><%= $volunteer->name %>
+      <small><%= $age %></small>
+      <span class="label label-<%= $status %>"><%= $status_map{$status} %></span>
+      % if ($status eq 'done' && $work->need_1365) {
+        % my $done = $work->done_1365;
+        % my $from = $work->activity_from_date;
+        % my $to   = $work->activity_to_date;
+        % my $org_username = $work->org_username || '';
+        % my $duration = $to - $from;
+        % my $hours = $duration->hours;
+        % $hours-- if $hours >= 8;
+        <p class="pull-right">
+          <small>
+            <%= $org_username %>
+            |
+            %= $birthdate->ymd
+          </small>
+          <button type="button" data-work-id="<%= $work->id %>" data-1365="<%= $done %>" class="btn btn-xs btn-1365 btn-<%= $done == 1 ? 'success' : $done == 0 ? 'danger' : 'default' %>">
+            1365
+            %= $hours . '시간'
+            <span>
+              % if ($done == 0) {
+                승인대기중
+              % } elsif ($done == 1) {
+                승인됨
+              % } else {
+                필요없음
+              % }
+            </span>
+          </button>
+        </p>
+      % }
+      % my $nth = $volunteer->volunteer_works({ status => 'done' })->count;
+      % if ($nth) {
+        <p><small><%= $nth %>번 방문</small></p>
+      % }
+    </h4>
+    <p class="list-group-item-text">
+      <mark><%= sprintf "%02d", $from->month %>-<%= sprintf "%02d", $from->day %></mark>
+      <span>
+        <time><%= sprintf "%02d", $from->hour %>:00</time>
+        ~
+        <time><%= sprintf "%02d", $to->hour %>:00</time>
+      </span>
+      <dl>
+        <dt>신청일</dt>
+        <dd><%= $work->create_date->ymd %></dd>
+        % my @activities = split /\|/, $work->activity // '';
+        <dt>관심있는 활동</dt>
+        <dd>
+          <%= join(', ', @activities) %>
+        </dd>
+        <dd>
+          % if ($work->status eq 'reported') {
+            <button type="button" data-work-id="<%= $work->id %>" class="btn btn-success btn-sm btn-status" data-status="approved">승인</button>
+          % } elsif ($work->status eq 'approved') {
+            <button type="button" data-work-id="<%= $work->id %>" class="btn btn-info btn-sm btn-status" data-status="done">방문</button>
+            <button type="button" data-work-id="<%= $work->id %>" class="btn btn-warning btn-sm btn-status" data-status="drop">방문안함</button>
+          % }
+          % if ($work->status ne 'canceled') {
+            <button type="button" data-work-id="<%= $work->id %>" class="btn btn-danger btn-sm btn-status" data-status="canceled">취소</button>
+          % }
+          <a href="<%= url_for('/works/' . $work->id) %>" class="btn btn-default btn-sm">자세히</a>
+          <a href="<%= url_for('/works/' . $work->id) %>/edit?authcode=<%= $work->authcode %>" class="btn btn-default btn-sm">수정</a>
+        </dd>
+      </dl>
+    </p>
+  </span>
+<% end %>
+
+<div class="row">
+  <div class="col-md-4 col-md-offset-2">
+    <h2>
+      봉사활동 목록
+      <small>
+        % my $status = param('status') || 'reported';
+        <span class="label label-<%= $status %>"><%= $status_map{$status} %></span>
+      </small>
+    </h2>
+    <div class="search">
+      <form method="GET">
+        <div class="input-group">
+          <input type="text" name="q" value="<%= param('q') %>" placeholder="이름, 전화번호, 이메일" class="form-control">
+          <span class="input-group-btn">
+            <button type="submit" class="btn btn-default">
+              <i class="bigger-110 icon-search">검색</i>
+            </button>
+          </span>
+        </div>
+      </form>
+    </div>
+
+    <hr>
+
+    <ul class="list-inline">
+      <li><a href="<%= url_for->query(status => 'reported') %>"><span class="label label-reported">신청</span></a></li>
+      <li><a href="<%= url_for->query(status => 'approved') %>"><span class="label label-approved">승인</span></a></li>
+      <li><a href="<%= url_for->query(status => 'done') %>"><span class="label label-done">방문</span></a></li>
+      <li><a href="<%= url_for->query(status => 'canceled') %>"><span class="label label-canceled">취소</span></a></li>
+      <li><a href="<%= url_for->query(status => 'drop') %>"><span class="label label-drop">방문안함</span></a></li>
+    </ul>
+    <hr class="colorgraph">
+    %= include 'partials/pagination' if $pageset;
+    <div class="list-group">
+      % while (my $work = $standby ? $standby->next : undef) {
+        %= $volunteer_item_block->($work)
+      % }
+      % while (my $work = $works->next) {
+        %= $volunteer_item_block->($work)
+      % }
+      % unless ($works->count) {
+        % my $status = param('status') || 'reported';
+        <span class="list-group-item"><span class="label label-<%= $status %>"><%= $status_map{$status} %></span> 신청서가 없습니다</span>
+      % }
+    </div>
+  </div>
+  <div class="col-md-5">
+    <div class="text-center">
+      <iframe src="https://www.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=volunteer%40theopencloset.net&amp;color=%231B887A&amp;ctz=Asia%2FSeoul" style=" border-width:0 " width="800" height="600" frameborder="0" scrolling="no"></iframe>
+    </d% >
+  </div>
+</div>
